--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "element-plus": "^2.3.14",
     "mockjs": "^1.1.0",
     "pinia": "^2.1.6",
+    "pinia-plugin-persistedstate": "^3.2.0",
     "sass": "^1.67.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
