feat: 系统首页布局以及头部实现路由tabs切换

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,6 +5,7 @@
   "compilerOptions": {
     "composite": true,
     "baseUrl": ".",
+    "module": "ES2022",
     "paths": {
       "@/*": ["./src/*"]
     }
